Fix spacing by increasing CSS specificity

--- a/app/javascript/dashboard/assets/scss/super_admin/index.scss
+++ b/app/javascript/dashboard/assets/scss/super_admin/index.scss
@@ -8,6 +8,21 @@
     font-weight: var(--font-weight-light);
     margin-top: var(--space-large);
   }
+
+  .update-subscription--checkbox {
+    display: flex;
+
+    input {
+      line-height: 1.5;
+      margin-right: var(--space-one);
+    }
+
+    label {
+      font-size: var(--font-size-small);
+      line-height: 1.5;
+      margin-bottom: var(--space-normal);
+    }
+  }
 }
 
 .alert-box {
@@ -20,17 +35,4 @@
   text-align: center;
 }
 
-.update-subscription--checkbox {
-  display: flex;
 
-  input {
-    line-height: 1.5;
-    margin-right: var(--space-one);
-  }
-}
-
-.update-subscription--label {
-  font-size: var(--font-size-small);
-  line-height: 1.5;
-  margin-bottom: var(--space-normal);
-}
